--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,11 +68,10 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 # auto window rename
 set-window-option -g automatic-rename
 
-# source the time-entry file
-source-file ~/.tmux/time-entry.conf
-
 # run any shell command
 bind -n M-x command-prompt -p >> 'run-shell "%%"'
 
 # color
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",*col*:Tc"
