--- a/.ssh/config
+++ b/.ssh/config
@@ -1,48 +1,4 @@
-Host grstaging
-User deployer
-HostName 192.241.178.118
-
-Host grproduction
-User deployer
-HostName eventspot.glenraven.com
-
-Host preprodweaveupapp01
-User dev
-HostName 162.242.240.126
-
-Host preprodweaveupworker01
-User dev
-HostName 104.130.161.118
-
-Host preprodweaveupdb01
-User dev
-HostName 104.130.161.118
-
-Host prodweaveupworker02
-User dev
-HostName 104.130.228.33
-
-Host prodweaveupworker01
-User dev
-HostName 104.130.228.30
-
-Host prodweaveupdb01
-User dev
-HostName 104.130.13.48
-
-Host prodweaveupapp02
-User dev
-HostName 104.130.25.170
-
-Host prodweaveupapp01
-User dev
-HostName 104.130.2.137
-
-Host prodweaveupweb01
-User dev
-HostName 162.242.233.104
-
-Host ubuntu
-User joe
-HostName 127.0.0.1
-Port 2222
+Host *
+  AddKeysToAgent yes
+  UseKeychain yes
+  Identityfile ~/.ssh/id_rsa
