--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # status bar
-set-option default-command bash
+set-option -g default-command bash
 
 set -g status-interval 1
 set -g status-justify centre # center align window list
@@ -8,22 +8,16 @@ set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 
 # default statusbar colors
-set -g status-fg white
-set -g status-bg default
-set -g status-attr bright
+set -g status-style bright,bg=default,fg=white
 
 # default notification setting
 set-option -g display-time 4000
 
 # default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+setw -g window-status-style bg=default,fg=white,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+setw -g window-status-current-style bg=default,fg=white,bright
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -49,7 +43,7 @@ setw -g monitor-activity on
 set -g visual-activity off
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+setw -g window-status-current-style bg=red
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -72,6 +66,5 @@ set-window-option -g automatic-rename
 bind -n M-x command-prompt -p >> 'run-shell "%%"'
 
 # color
-set -g default-terminal "screen-256color"
-# set -g default-terminal "tmux-256color"
-# set -ga terminal-overrides ",*col*:Tc"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*col*:Tc"
