--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -2,6 +2,12 @@
   "python.formatting.provider": "black",
   "coc.preferences.formatOnSaveFiletypes": [
     "python",
-    "json"
+    "json",
+    "typescript",
+    "javascript",
+    "javascriptreact",
+    "rust"
   ],
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "cSpell.userWords": ["Ethnicities", "bindgen", "clippy"]
 }
