--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # status bar
-set-option -g default-command bash
+set-option -g default-command fish
 
 set -g status-interval 1
 set -g status-justify centre # center align window list
