--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,4 +67,4 @@ bind -n M-x command-prompt -p >> 'run-shell "%%"'
 
 # color
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*col*:Tc"
+set -ag terminal-overrides ",xterm-256color:RGB"
